# result_channel

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/jonathanvegasp/result_channel/: AnyExtensions.kt  BinaryReader.kt  BinarySerializer.kt  BinaryWriter.kt  Reader.kt  ResultChannel.kt  ResultChannelPlugin.kt  Serializer.kt  Writer.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/jonathanvegasp/result_channel_example/: MainActivity.kt
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: result_channel.podspec
ios/Classes/: BinaryReader.swift  BinarySerializer.swift  BinaryWriter.swift  Reader.swift  ResultChannel-Swift.swift  ResultChannelPlugin.swift  Serializer.swift  Writer.swift  result_channel.h
lib/: binary_reader.dart  binary_serializer.dart  binary_writer.dart  reader.dart  result_channel.dart  serializer.dart  writer.dart
lib/src/: binary_reader.dart  binary_serializer.dart  binary_writer.dart  ffi.dart  result_channel.dart  result_channel_status.dart  result_dart.dart  result_native.dart  result_native_extensions.dart  result_status.dart  serializer.dart  typedefs.dart
src/: CMakeLists.txt  result_channel.c  result_channel.cpp  result_channel.h
src/include/: result_channel.h
